--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ packages = [{include = "news_reader"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+openai = "^0.27.4"
+jinja2 = "^3.1.2"
 
 [tool.poetry.group.dev.dependencies]
 bs4 = "^0.0.1"
